# UAVExplorer

./: README.md
Planner/src/global_planner/: CMakeLists.txt  package.xml
Planner/src/global_planner/cfg/: dep_param.yaml
Planner/src/global_planner/include/global_planner/: PRMAstar.cpp  PRMAstar.h  dep.cpp  dep.h
Planner/src/global_planner/src/: test_dep_node.cpp
Planner/src/minco_curve/: CMakeLists.txt  package.xml
Planner/src/minco_curve/include/: fake_explorer_fsm.h  plan_container.hpp  plan_manager.h  simple_dwa.h  traj_optmizer_3D.h
Planner/src/minco_curve/include/utils/: lbfgs.hpp  map_interface.h  minco.hpp  poly_traj_utils.hpp  trajectory.hpp
Planner/src/minco_curve/launch/: advanced_param_PX4.xml  indoor1.launch  run_in_XTdrone.launch  simple_move_base.launch
Planner/src/minco_curve/launch/explore/: advanced_param.xml  explore.launch  rviz_explore.launch  simulator.xml  test_explore_fsm.launch
Planner/src/minco_curve/rviz/: display.rviz  display_3D.rviz  display_PX4.rviz  display_explore.rviz
Planner/src/minco_curve/sdf/iris_downward_camera/: iris_downward_camera.sdf
Planner/src/minco_curve/src/: fake_explorer_fsm.cpp  fake_explorer_node.cpp  fake_odom.cpp  plan_manager.cpp  simple_dwa.cpp  test.cpp  traj_optimizer_3D.cpp  traj_server.cpp
Planner/src/minco_curve/srv/: RotateDrone.srv
Planner/src/minco_curve/world/: fakeplanner.world
Planner/src/onboard_detector/: CMakeLists.txt
Planner/src/onboard_detector/cfg/: detector_param.yaml  fake_detector_param.yaml
Planner/src/onboard_detector/include/onboard_detector/: cluster.cpp  dynamicDetector.cpp  dynamicDetector.h  fakeDetector.cpp  fakeDetector.h
Planner/src/onboard_detector/scripts/yolo_detector/: test_actor.py  yolo_detector.py
Planner/src/onboard_detector/src/: detector_node.cpp
Planner/src/path_searching/: CMakeLists.txt  package.xml
Planner/src/path_searching/include/path_searching/: dyn_a_star_new.h
Planner/src/path_searching/src/: dyn_a_star_new.cpp
Planner/src/plan_env/: CMakeLists.txt  package.xml
Planner/src/plan_env/include/plan_env/: grid_map_new.h  value_map2d.h
Planner/src/plan_env/src/: grid_map.cpp  value_map2d.cpp
Planner/src/traj_utils/: CMakeLists.txt
Planner/src/traj_utils/msg/: Waypoints.msg
uav_simulator/Utils/assign_goals/src/: assign_goals_node.cpp
uav_simulator/Utils/rviz_plugins/: plugin_description.xml
uav_simulator/Utils/selected_points_publisher/src/: selected_points_publisher.cpp
uav_simulator/Utils/waypoint_generator/src/: waypoint_generator.cpp
uav_simulator/local_sensing/: CMakeLists.txt
uav_simulator/local_sensing/src/: depth_render.cu  pcl_render_node.cpp  pointcloud_render_node.cpp
uav_simulator/map_generator/: CMakeLists.txt
uav_simulator/map_generator/src/: random_complex_class.cpp  random_complex_generator.cpp
uav_simulator/so3_control/: CMakeLists.txt
uav_simulator/so3_control/src/: a_star_track.cpp  so3_control_nodelet.cpp
uav_simulator/so3_quadrotor_simulator/config/: rviz.rviz
uav_simulator/so3_quadrotor_simulator/launch/: simulator_example.launch
