<?xml version="1.0"?>
<package format="2">
    <name>minco_curve</name>
    <version>0.0.0</version>
    <description>The hybrid_a_star package</description>
    <maintainer email="849742405@qq.com">Zhang Zhimeng</maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <depend>nav_msgs</depend>
    <build_depend>tf</build_depend>
    <build_export_depend>tf</build_export_depend>
    <exec_depend>tf</exec_depend>
  <depend>plan_env</depend>
  <depend>path_searching</depend>
  <depend>onboard_detector</depend>
  <depend>global_planner</depend>
  <depend>message_generation</depend>
  

    <export>
    </export>
</package>
